syntax = "proto3";
option go_package = "ChitChat/grpc";

message ClientMessage {
  int64 lamport_timestamp = 1;
  string from = 2;
  string message = 3;
}

service ChitChat {
  rpc Chat (stream ClientMessage) returns (stream ClientMessage) {};
}